# DPBH

./: .sample.env  README.md
api/: .dockerignore  .gitignore  .sample.env  Dockerfile  database.db  main.py  pyproject.toml
api/core/: base.py  helper.py
api/data/raw/: httpsblinkstorein.csv  httpsnordvpncom.csv  httpspaytmmallcom.csv  httpssurfsharkcom.csv  httpswwwaliexpresscom.csv  httpswwwamazonin.csv  httpswwwapplecomstore.csv  httpswwwbigrockindomain-regist.csv  httpswwwbookingcom.csv  httpswwwebaycom.csv  httpswwwexpressvpncom.csv  httpswwwfirstcrycom.csv  httpswwwflipkartcom.csv  httpswwwgodaddycomen-indomains.csv  httpswwwgraboninelectronics-co.csv  httpswwwhostingerindomain-name.csv  httpswwwindiamartcom.csv  httpswwwkasperskycoin.csv  httpswwwmyntracom.csv  httpswwwolxinen-in.csv  httpswwwpepperfrycom.csv  httpswwwryanaircomgben.csv  httpswwwshopcluescom.csv  httpswwwshopifycomin.csv  httpswwwsnapdealcom.csv  httpswwwudemycom.csv  httpswwwwhatthespotscom.csv
api/database/: database.py  models.py  schemas.py  services.py
api/utils/: crawler.py  utils.py
extension/: .gitignore  manifest.json
extension/popup/: popup.html  popup.js
extension/scripts/: background.js  content.js
extension/stylesheets/: content.css  style.css
