[tool.poetry]
name = "dpbh"
version = "0.1.0"
description = ""
authors = ["Team Z"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
torch = "^2.2.0"
transformers = "^4.37.2"
nltk = "^3.8.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
